ui/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

.bg-ocean {
  @apply bg-mobile bg-cover bg-center md:bg-desktop;
}

.bg-shallow {
  @apply bg-shallow-mobile md:bg-shallow-desktop bg-cover bg-center;
}

.bg-reef {
  @apply bg-reef-mobile md:bg-reef-desktop bg-cover bg-center;
}

.bg-open {
  @apply bg-open-mobile md:bg-open-desktop bg-cover bg-center;
}

.bg-deep {
  @apply bg-deep-mobile md:bg-deep-desktop bg-cover bg-center;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }

  .pause {
    animation-play-state: paused;
  }

  .custom-bg {
    @apply border-accent/30 bg-background/20 shadow-glass-inset hover:shadow-glass-sm border border-solid backdrop-blur-[6px];
  }
}

/* Keyframe for natural, curving movement */

@keyframes move-left {
  0% {
    transform: translate(-100%, 0) rotate(0deg);
  }
  20% {
    transform: translate(0vw, 0) rotate(0deg);
  }
  40% {
    transform: translate(25vw, -7vw) rotate(10deg);
  }
  60% {
    transform: translate(50vw, 7vw) rotate(-10deg);
  }
  80% {
    transform: translate(75vw, -5vw) rotate(5deg);
  }
  100% {
    transform: translate(100vw, 0) rotate(0deg);
  }
}
@keyframes move-right {
  0% {
    transform: translate(100%, 0) rotate(0deg);
  }
  20% {
    transform: translate(0, 0) rotate(0deg);
  }
  40% {
    transform: translate(-25vw, 7vw) rotate(10deg);
  }
  60% {
    transform: translate(-50vw, -7vw) rotate(-10deg);
  }
  80% {
    transform: translate(-75vw, 5vw) rotate(5deg);
  }
  100% {
    transform: translate(-100vw, 0) rotate(0deg);
  }
}

@keyframes move-left-large {
  0% {
    transform: translate(-100%, 0);
  }
  100% {
    transform: translate(120vw, 0);
  }
}
@keyframes move-right-large {
  0% {
    transform: translate(100%, 0);
  }
  100% {
    transform: translate(-120vw, 0);
  }
}

.fish {
  animation-timing-function: cubic-bezier(
    0.42,
    0.58,
    0.78,
    1
  ); /* Smooth curve */
  transform-origin: center;
  will-change: transform;
}

@keyframes move {
  0% {
    transform: translate(0, 0);
  }
  100% {
    transform: translate(100px, 100px);
  }
}

@keyframes attackEffect {
  0% {
    transform: scale(1);
    opacity: 1;
  }
  50% {
    transform: scale(1.2);
    opacity: 0.7;
  }
  100% {
    transform: scale(1);
    opacity: 1;
  }
}

.animate-attack-effect {
  animation: attackEffect 0.2s ease-in-out;
}

.glow-effect {
  text-shadow:
    0 0 10px #00fff0,
    0 0 20px #00fff0,
    0 0 30px #00fff0;
}

